add css and card images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
+    <main>
+        <header>
+            <h1>JAVASCRIPT PAIRS GAME</h1>
+        </header>
+
+        <section>
+            <h3>CLICK ANY CARD TO BEGIN</h3>
+            <div class="counter"></div>
+        </section>
+
+        <section>
+            <div class="cards">
+                <div class="cards__row">
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                </div>
+                <div class="cards__row">
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+                    <div class="card card--back"></div>
+
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div>Köszönöm, hogy játszottál a művemmel :)</div>
+        </footer>
+
+
+    </main>
     <script src="./js/pair-game.js"></script>
+    <scrip t src="./js/counter.js">
+        </script>
 </body>
+counter.jsdy>
 
 </html>
