--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <section>
             <div class="cards">
                 <div class="cards__row">
-                    <div class="card card--back"></div>
+                    <div class="card card--back"><i class="fa fa-save"></i></div>
                     <div class="card card--back"></div>
                     <div class="card card--back"></div>
                     <div class="card card--back"></div>
