--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </header>
 
         <section>
-            <h3>CLICK ANY CARD TO BEGIN</h3>
+            <h3 class="clock">CLICK ANY CARD TO BEGIN</h3>
             <div class="counter"></div>
         </section>
 
         <section>
             <div class="cards">
                 <div class="cards__row">
-                    <div class="card card--back"><i class="fa fa-save"></i></div>
+                    <div class="card card--back"></div>
                     <div class="card card--back"></div>
                     <div class="card card--back"></div>
                     <div class="card card--back"></div>
@@ -47,8 +47,8 @@
 
     </main>
     <script src="./js/pair-game.js"></script>
-    <scrip t src="./js/counter.js">
-        </script>
+    <script src="./js/counter.js">
+    </script>
 </body>
 counter.jsdy>
 
