html  content fix

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 
     </main>
     <script src="./js/pair-game.js"></script>
-    <script src="./js/counter.js">
-    </script>
+    <script src="./js/counter.js"></script>
 </body>
-counter.jsdy>
 
 </html>
